--- a/Skill.html
+++ b/Skill.html
@@ -13,7 +13,7 @@
 </div>
 <div class="header">
 <div id="img1" class="header" ><img src="j.jpg" /></div>
-<div id="form1" class="header"><a href="https://www.google.com"><b>Home</b></a></div>
+<div id="form1" class="header"><a href="home.html"><b>Home</b></a></div>
 <div id="form2" class="header"><a href="cont.html"><b>Contact</b></a></div>
 <div id="form3" class="header"><a href="Ed.html"><b>Educational Details</b></a></div>
 <div id="form4" class="header"><a href="Skill.html"><b>Skills</b></a></div>
